--- a/main.css
+++ b/main.css
@@ -36,6 +36,7 @@
   line-height: 100vh;
   mix-blend-mode: screen; }
   h2 span {
+    lin
     line-height: 16px;
     display: inline-block;
     position: relative;
