--- a/main.css
+++ b/main.css
@@ -36,15 +36,11 @@
   line-height: 100vh;
   mix-blend-mode: screen; }
   h2 span {
-    lin
+ 
     line-height: 16px;
     display: inline-block;
     position: relative;
     bottom: 5px;
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-    -ms-filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+    transform: translate(0, 100%) rotate(-90deg);
+
 }
